kubernetes/service.yml
---
# ClusterIP Service (internal only)
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP

---
# NodePort Service (accessible from outside)
apiVersion: v1
kind: Service
metadata:
  name: myapp-nodeport
  labels:
    app: myapp
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP

---
# LoadBalancer Service (cloud provider)
apiVersion: v1
kind: Service
metadata:
  name: myapp-loadbalancer
  labels:
    app: myapp
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
